Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
 <p>Mari belajar mendesain teks pada web dengan tutorial "Mempercantik Typographi Dengan Efek Bayangan"</p>
 
-<p>Cek hasil jadinya di sini [CONTOH]
+<p>Cek hasil jadinya <a href="http://geekmagz.com/labs/Typographi_dengan_efek_bayangan">disini</a>.
 Silahkan download source codenya dan silahkan di eksplorasi lagi ya </p>
 
 <h3>Penulis</h3>
 
-<p>Kamu bisa mention <a href="twitter.com/primaapriansyah">@primaapriansyah</a> Prima Utama Apriansyah di twitter untuk tanya jawab. Dan hasilnya akan dialihkan<code>&lt;a&gt;</code> ke prima sebagai  penulis. </p>
+<p>Kamu bisa mention <a href="twitter.com/primaapriansyah">@primaapriansyah</a> Prima Utama Apriansyah di twitter untuk tanya jawab. Dan hasilnya akan dialihkan <code>&lt;a&gt;</code> ke prima sebagai  penulis. </p>
 
 <h3>Contoh Lainya</h3>
 
-<p>Untuk melihat-lihat contoh lainya dapan kalian eksplorasi di website <a href="http://geekmagz.com">GeekMagz.com</a></p>
+<p>Untuk melihat-lihat contoh serta tutorial lainya dapan kalian eksplorasi di website <a href="http://geekmagz.com">GeekMagz.com</a></p>
       </section>
     </div>
 
